--- a/index.html
+++ b/index.html
@@ -4,17 +4,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+      integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
       crossorigin="anonymous"
-      referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Project Starter</title>
+    <title>FAQ Collapse</title>
   </head>
   <body>
-    <h1>Project Starter</h1>
-
+    <h1>Frequently Asked Questions</h1>
+    <div class="faq-container">
+      <div class="faq active">
+        <h3 class="faq-title">Why shouldn't we trust atoms?</h3>
+        <p class="faq-text">They make up everything!</p>
+        <button>
+          <i class="fas fa-chevron-down"></i>
+          <i class="fas fa-times"></i>
+        </button>
+      </div>
+      <div class="faq active">
+        <h3 class="faq-title">
+          What do you call someone with no body and no nose?
+        </h3>
+        <p class="faq-text">Nobody knows.</p>
+        <button>
+          <i class="fas fa-chevron-down"></i>
+          <i class="fas fa-times"></i>
+        </button>
+      </div>
+      <div class="faq active">
+        <h3 class="faq-title">
+          What's the object-oriented way to become wealthy?
+        </h3>
+        <p class="faq-text">Inheritance.</p>
+        <button>
+          <i class="fas fa-chevron-down"></i>
+          <i class="fas fa-times"></i>
+        </button>
+      </div>
+      <div class="faq active">
+        <h3 class="faq-title">
+          How many tickles does it take to tickle an octopus?
+        </h3>
+        <p class="faq-text">Ten-tickles!</p>
+        <button>
+          <i class="fas fa-chevron-down"></i>
+          <i class="fas fa-times"></i>
+        </button>
+      </div>
+      <div class="faq active">
+        <h3 class="faq-title">What is: 1 + 1?</h3>
+        <p class="faq-text">Depends on who you are asking.</p>
+        <button>
+          <i class="fas fa-chevron-down"></i>
+          <i class="fas fa-times"></i>
+        </button>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
